--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,19 @@
 <resources>
     <string name="app_name">Greeshma_Prasad_Project2</string>
     <string name="enter_email">Please enter email</string>
+    <string name="vegetable">Vegetables</string>
+    <string name="farm_fresh_tomato_1kg">farm fresh tomato 1kg</string>
+    <string name="proceed_to_payment">Proceed To Payment</string>
+    <string name="address_label">Address Label</string>
+    <string name="address_label_optional">Address Label(optional)</string>
+    <string name="area">Area</string>
+    <string name="postal_code">Postal Code</string>
+    <string name="enter_building_name">Enter building name</string>
+    <string name="building_name">Building Name</string>
+    <string name="card_number">Card Number</string>
+    <string name="xxxx_xxxx_xxxx_xxxx">xxxx xxxx xxxx xxxx</string>
+    <string name="expiry_date">Expiry Date</string>
+    <string name="mm_yy">MM/YY</string>
+    <string name="cvv">CVV</string>
+    <string name="country">Country</string>
 </resources>
